--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <h1 id="level-title">Press Start</h1>
+    <div>
+        <h3 id="best-score">Best Score: <span>0</span></h3>
+        <!-- <h3 id="current-score">Current Score: <span>0</span></h3> -->
+    </div>
     <button onclick="startGame()" class="" type="button" name="button">START</button>
 
     <div class="container">
@@ -23,7 +27,7 @@
         </div>
     </div>
 
-    <footer>Made with <span>❤️</span> by Tanmay</footer>
     <script src="index.js" charset="utf-8"></script>
+    <!-- <footer>Made with <span>❤️</span> by Tanmay</footer> -->
 </body>
 </html>
